syntax = "proto3";

service TransactionReplicationService
{
	rpc URBBroadcast(URBBroadcastRequest) returns (URBBroadcastResponse);
	rpc BEBDeliver(BEBDeliverRequest) returns (BEBDeliverResponse);
}

message RPCStoreDadInt {
	string key = 1;
	int32 value = 2;
	int32 epoch = 3;
	int32 epochWriteVersion = 4;
}

message ReplicationMessage
{
	string guid = 1;
	// Who initiated the replication
	string executingManagerId = 2;
	repeated RPCStoreDadInt dadInts = 3;
	repeated string readDadInts = 4;
}

// URBBroadcast
message URBBroadcastRequest
{
	ReplicationMessage message = 1;
	string senderId = 2;
}

message URBBroadcastResponse
{
	bool ok = 1;
}
// ------------------------------

// BEBDeliver
message BEBDeliverRequest
{
	ReplicationMessage message = 1;
	string senderId = 2;
}

message BEBDeliverResponse
{
	bool ok = 1;
}
// ------------------------------